--- a/reactjs/first-app/src/App.css
+++ b/reactjs/first-app/src/App.css
@@ -1,4 +1,4 @@
-/*.App {
+.App {
   text-align: center;
 }
 
@@ -35,9 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-}*/
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
 }
