--- a/reactjs/first-app/src/index.css
+++ b/reactjs/first-app/src/index.css
@@ -3,7 +3,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-/*
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,4 +15,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}*/
+}
